styl/screen.styl
contentWidth = 660px
textColor = rgb(80, 80, 80)
projectImageHeight = 180px
projectImageWidth = 300px

*
	border 0
	margin 0
	padding 0
	font-size 100%
	box-sizing border-box

html
	background-color white

body
	font 500 18px / 1.3 "Helvetica", sans-serif
	color textColor

hr
	height 1px
	background-color rgb(240, 240, 240)
	margin-bottom 1em

h1, h2, h3, h4, h5, h6
	color rgb(30, 30, 30)

h1
	margin-bottom 1em

a
	&:link
		color rgb(100, 150, 200)
	&:visited
		color rgb(150, 100, 200)

p
	margin-bottom 0.8em

ul
	margin-left 2em

ol
	margin-left 2em

pre
	font-size 0.8em
	margin-bottom 0.6em

pre code
	font-size inherit;

code
	background-color rgb(230,230,230);
	border 1px solid rgb(220,220,220);
	font-size 0.9em;
	border-radius 2px;
	padding 0 0.2em;

ul
	margin-bottom 0.6em;


#wrapper
	> header
		background-color rgb(240, 240, 240)
		height 2.5em
		margin-bottom 40px
		padding-top 10px
		padding-bottom 10px
		h1
			display inline-block
		a
			&:link,
			&:visited
				color textColor

	.headerContent
		margin 0 auto

#wrapcontent
	margin 0 auto 50px auto
	padding 0 1em

.fullHeader
	.headerContent
		position relative
		text-align left
		padding-left 1em
		padding-right 1em
	h1
		margin-bottom 0
		a
			text-decoration none
	aside
		float right
		display inline-block

.post
	p
		text-align justify

header
	text-align center

aside
	text-align center
	font-size 1.2em
	a
		display inline-block
		margin-right 0.2em
		text-decoration none
		color inherit
		span
			display none
		&:last-of-type
			margin-right 0

#description
	margin-bottom 3em
	h1
		display inline-block
		font-weight 900
		font-size 3em
		font-family "Trebuchet MS", sans-serif
		line-height 1.3
		margin-bottom 0.5em
		margin-top 0.4em
		span
			display inline-block // Avoid wrapping in mobile view

	.subtitle,
	.subSubtitle
		color rgb(120, 120, 120)

	.subtitle
		text-align center
		font 500 34px / 50px "Tahoma", sans-serif
		margin-bottom 0.5em

article
	margin-bottom 2em
	> h1
		font-size 1.2em

#projects
	margin-left 0
	max-width projectImageWidth
	li
		text-align center
		display inline-block
		vertical-align top
		margin 0 15px 20px 0
		height projectImageHeight
		text-indent -9999px
		width 100%
		&:nth-of-type(2n)
			margin-right 0
		a
			text-decoration none
			display block
			width 100%
			height 100%

#chuisy
	background-image url(../img/chuisy.png) , linear-gradient(rgb(230, 30, 75), rgb(140, 0, 0))
	background-repeat no-repeat, repeat-x
	background-size 200px, 100%
	background-position center

#schifferpatent
	background-image url(http://schifferpatent.org/img/logo.svg) , linear-gradient(rgb(60, 160, 250), rgb(30, 100, 200))
	background-repeat no-repeat, repeat-x
	background-position 50%, 50%
	background-size 90% auto, 100%

#vectual
	background-image url(../img/vectual.png)
	background-repeat no-repeat, repeat-x
	background-position 60%, 50%
	background-size 120%

#timeomat
	background-image url(../img/timeomat.png)
	background-repeat no-repeat
	background-position 0px, -20px
	background-size 100%
	text-align center
	color rgb(255, 255, 255)

#bitcoinate
	background-image url(https://raw.github.com/adius/bitcoinate/v0.1.2/img/bitcoinate50.png) , linear-gradient(#f7931a, #c16c07)
	background-size 28px, 100%
	background-position 50px 50%, 50%
	background-repeat no-repeat
	font 900 40px / projectImageHeight "Arial", sans-serif
	text-shadow 0 -2px 1px rgba(0, 0, 0, 0.5)
	text-indent 40px !important
	a
		color white

#designection
	background-image url(../img/designection.png) , linear-gradient(rgba(150, 150, 150, 1), rgba(50, 50, 50, 1))
	background-repeat no-repeat, repeat-x
	background-size 280px, 100%
	background-position center

#leomask
	background-image linear-gradient(rgba(0, 0, 0, 0), rgba(30, 30, 30, 0.3)), url(../img/paper.jpg)
	text-align center
	text-indent 0 !important
	font 700 40px / projectImageHeight "Myriad Pro", sans-serif
	a
		color rgb(50, 50, 50)

#fakesome
	background-image url(../img/fakesome.png)
	background-repeat no-repeat
	background-size 100%
	text-align center
	color rgb(255, 255, 255)

#shaven
	background-image url(../img/shaven.png)
	background-repeat no-repeat
	background-size 100%
	text-align center

#coming-soon
	border 4px dashed rgb(100, 100, 100)
	line-height projectImageHeight
	text-decoration none
	font-size 24px
	text-indent 0 !important
	vertical-align middle
	a
		color rgb(100, 100, 100)

#resume
	p
		line-height 1.5
		margin 0
		& + p
			margin-top 10px

	h1, h2, h3, h4
		margin-top 0

	section
		margin-top 30px

	li
		line-height 1.8
		list-style none
		&:before
			content "\f052"
			float left
			font 13px Octicons
			margin-top 6px
			margin-left -20px
			opacity .1
			position absolute

	blockquote
		border-left 5px solid #e7e9ec
		font-size 14px

	em
		color #95a5a6
		font-weight normal
		font-style normal

	h4
		span:first-child
			color #000
			font-weight bold

	.container
		max-width 750px
		padding 0 30px

	.col-sm-6
		margin-bottom 10px

	.col-sm-12
		h4
			margin-top 12px
		& + .col-sm-12
			margin-top 30px

	#header
		background #f4f6f6
		padding 50px 0
		margin-bottom 30px
		margin-bottom 10px
		padding 40px 0
		h2
			color #95a5a6
			font-size 24px

	#content
		h3
			color #f1c40f
			font-size 26px
			margin-top -4px
		aside
			text-align right
			padding-right 30px
			margin-bottom 20px
			padding-right 0
			text-align left

	#profiles
		.network
			text-transform capitalize

	#work .position,
	#volunteer .position
		font-weight bold
		margin-bottom 8px

	#education
		.area
			font-weight bold
			&:before
				content "\f0d7"
				font 16px Octicons
				margin-right 6px
		.studyType
			margin-left 25px

	#awards .summary,
	#publications .summary
		margin-top 8px

	#publications
		.website
			a:before
				content attr(href)
				content "View publication"

	@media (min-width 480px)
		.strike-through span,
		.strike-through a
			background #fff
			position absolute

		.strike-through
			border-top 1px solid #f4f6f6
			height 20px
			margin-top 12px
			margin-bottom -2px
			position relative
			span:first-child
				padding-right 20px
				margin-top -12px
			span + span
				font-size 14px
				margin-top -10px
				padding-left 20px
				right 0


	@media (max-width 768px)
		.col-sm-6:last-child
			margin-bottom 0px

		#content aside
			margin-bottom 20px
			padding-right 0
			text-align left

		#publications .website a:before
			content "View publication"


	@media (max-width 480px)
		h1
			font-size 26px

		.date
			font-size 14px
			margin-bottom 5px

		.strike-through span:first-child
			margin-bottom 7px

		.strike-through span
			display block

		#header
			margin-bottom 10px
			padding 40px 0

		#actions
			display none


@media screen and (min-width 400px)
	#projects
		margin 0 auto
		li
			width projectImageWidth
	aside
		a
			margin-right 0.5em

@media screen and (min-width contentWidth)
	#wrapper
		.headerContent
			width contentWidth

	#wrapcontent
		width contentWidth

	#projects
		max-width none

